# learningopengl

./: .gitignore  CMakeLists.txt  README.md
Assets/: awesomeface.ktx  awesomeface.ktx2  container.ktx2  wall.ktx2
include/: GlGraphicsProgram.h  KTXTexture.h  ShaderProgramBuilder.h  Texture.h  TextureLoader.h
include/learnopengl/: shader_s.h
include/lib/: math.h
learning_resources/: debugging.yaml  gl.yaml  textures.yaml
scripts/: glad_generator.py  project_config.yaml
shaders/: colorFromVS.frag  vertexShader.vert
src/: CMakeLists.txt  GlGraphicsProgram.cpp  KTXTexture.cpp  ShaderProgramBuilder.cpp  Texture.cpp  TextureLoader.cpp  glad.c  main.cpp
src/lib/: math.cpp
